# masha-core

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/: build.yaml
.github/workflows/: build.yaml
cli/: main.cpp
core/: encrypt.cpp  encrypt.h  hash.cpp  hash.h  load.cpp  load.h  quarantine.cpp  quarantine.h  scan.cpp  scan.h  yara.cpp  yara.h
kernel-driver/mavFilter/: mavFilter.inf  mavFilter.sln  mavFilter.vcxproj  mavFilter.vcxproj.filters  minifilter.c
service/: log.cpp  log.hpp  service.cpp  usn.cpp  usn.h
